Fix the bug that sticky element may not be correctly invalidated due to non-promotion.

When a non composited sticky element is nested in a compositied ancestor
which requires repaint on scroll, the sticky element should also be
composited to have correct paint invalidation.

TEST=compositing/overflow/non-composited-sticky-element-in-main-thread-scrolled-composited-ancestor.html;
BUG=698358
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2845613002
Cr-Commit-Position: refs/heads/master@{#472947}

Former-commit-id: e44021ea6e3e18bc59854b4c8d30999f1fc4379f